[gd_scene load_steps=9 format=2]

[ext_resource path="res://backend/talk_interactions/stt/Speech_to_text.tscn" type="PackedScene" id=1]
[ext_resource path="res://backend/talk_interactions/tts/Text_to_speech.tscn" type="PackedScene" id=2]
[ext_resource path="res://backend/talk_interactions/openai/Openai.tscn" type="PackedScene" id=3]
[ext_resource path="res://backend/NPCs.tscn" type="PackedScene" id=4]
[ext_resource path="res://frontend/recorder/Record.tscn" type="PackedScene" id=5]
[ext_resource path="res://backend/talk_interactions/translator/TranslatorHelper.tscn" type="PackedScene" id=6]
[ext_resource path="res://frontend/SpeechInteractions.gd" type="Script" id=7]
[ext_resource path="res://frontend/AudioStreamPlayer.gd" type="Script" id=8]

[node name="SpeechInteractions" type="Node"]
script = ExtResource( 7 )

[node name="Stt" parent="." instance=ExtResource( 1 )]

[node name="TranslatorHelper" parent="." instance=ExtResource( 6 )]

[node name="Tts" parent="." instance=ExtResource( 2 )]

[node name="Record" parent="." instance=ExtResource( 5 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = "Speech"
script = ExtResource( 8 )

[node name="NPC" parent="." instance=ExtResource( 4 )]

[node name="Openai" parent="." instance=ExtResource( 3 )]

[connection signal="file_saved" from="Record" to="." method="_on_Record_file_saved"]
[connection signal="trigger" from="NPC" to="." method="_on_NPC_trigger"]
